hphp/test/zend/good/Zend/tests/debug_info-error-object.php.expectf

Fatal error: __debugInfo() must return an array in %s/debug_info-error-object.php on line 14
